--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,12 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:text="Check-List"
+        android:background="@drawable/toolbar_layout"
         android:gravity="center"
-        android:textSize="35dp"
-        android:textStyle="bold"
+        android:text="Check-List"
         android:textColor="@color/black"
-        android:background="#47E2BB"/>
+        android:textSize="35dp"
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/item_list"
